--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -128,7 +128,7 @@ footer a:hover {
 /* Media Queries for responsiveness */
 @media screen and (max-width: 1024px) {
     .nav-links {
-        width: 70%;
+        width: 85%;
     }
 }
 
@@ -144,8 +144,8 @@ footer a:hover {
     right: 0;
     top: 75px;
     height: 92vh;
-    background: black url('./Nav.svg') repeat; /* Reference the nav.svg file */
-    box-shadow: -5px 0px 15px rgba(0, 0, 0, 0.5);  /* Shadow instead of glow */
+    background: black url('./Nav.svg') repeat; 
+    box-shadow: -5px 0px 15px rgba(0, 0, 0, 0.5); 
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -162,7 +162,7 @@ footer a:hover {
         animation: fadeIn 0.5s ease-out forwards;
         width: 100%;
         text-align: center;
-        padding: 30px 0;  /* Reduced space between titles */
+        padding: 30px 0; 
     }
 
     /* Line separator between items */
