--- a/src/components/TeamSection/TeamSection.css
+++ b/src/components/TeamSection/TeamSection.css
@@ -91,7 +91,7 @@ body {
 
 .team-card-role {
     font-size: 16px;
-    color: #ff6f61; 
+    color: #008080; 
     margin-bottom: 10px;
 }
 
@@ -168,14 +168,14 @@ body {
 }
 
 .social-icon {
-    width: 50px;  /* Adjust the size of the icons */
+    width: 50px; 
     height: 50px;
     margin-right: 10px;
     transition: transform 0.3s ease-in-out;
   }
   
   .social-icon:hover {
-    transform: scale(1.1);  /* Slightly enlarge on hover */
+    transform: scale(1.1);  
   }
   
 
@@ -195,7 +195,7 @@ body {
     font-size: 22px;
     background: none;
     border: none;
-    color: #ff6f61;
+    color: #008080;
     cursor: pointer;
     transition: transform 0.2s ease;
 }
@@ -220,7 +220,7 @@ body {
 /* Modal Role */
 .modal-role {
     font-size: 16px;
-    color: #ff6f61;
+    color: #008080;
     margin-bottom: 10px;
 }
 
@@ -245,7 +245,7 @@ body {
 }
 
 .modal-socials a:hover {
-    color: #ff6f61;
+    color: #008080;
     transform: scale(1.2);
 }
 
